--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <div class="crop-modal" id="cropModal">
         
-        <h2 style="color:rgb(255, 65, 65); margin-bottom: 1.5rem; font-size: 1.2rem; font-weight: 600; letter-spacing: 0.05em; text-shadow: 0 0 6.5px rgb(196, 57, 57);">ADJUST CARD CORNERS</h2>
+        <h2 style="color:rgb(255, 65, 65); margin-bottom: 1.5rem; font-size: 1.2rem; font-weight: 600; letter-spacing: 0.05em; ">ADJUST CARD CORNERS</h2>
         <div class="crop-container">
             <div class="crop-canvas-wrapper" id="cropWrapper">
                 <canvas id="cropCanvas"></canvas>
@@ -237,4 +237,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
