Fix HTML formatting and encoding issues

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 
     <div class="easter-egg-footer"> 
         Developed with <span><i class="fa-solid fa-heart" style="font-size:0.8em; color: #ef4444;"></i></span> by Arslan
+        <span class="popup-text"></span>
     </div>
 
     <input type="file" id="singleUpload" style="display: none;" accept="image/*">
@@ -237,5 +238,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
